# Loom

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  loom-tail  loom.py  pyproject.toml
prompts/: alpha_compact_prompt.md  system_prompt.jinja2
scripts/: anthropic_trace_test.py  iota.py  loom-cli.py
src/greatloom/: __init__.py  app.py  metadata.py  middleware.py  protocol.py  proxy.py  quota.py  router.py
src/greatloom/alpha/: __init__.py  capsule.py  compact.py  context.py  hud.py  intro.py  memories.py  scrub.py  soul.py  token_count.py
src/greatloom/patterns/: __init__.py  passthrough.py
src/greatloom/patterns/alpha/: __init__.py
src/greatloom/patterns/iota/: __init__.py  compact.py  prompt.md  prompt2.md
src/loom/: __init__.py  __main__.py  app.py  compact.py  hippo.py  intro.py  llm_spans.py  metadata.py  prompt.py  proxy.py  quota.py  traces.py  watcher.py
