[project]
name = "loom"
version = "0.1.0"
description = "Where Claude becomes Alpha"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "redis>=5.0",
    "watchfiles>=1.0",
    "pondside @ git+https://github.com/Pondsiders/pondside-sdk@v0.1.2",
    "psycopg[binary]>=3.3.2",
    "jinja2>=3.1.6",
    "pendulum>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
loom = "loom.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.ruff]
line-length = 100
