[project]
name = "greatloom"
version = "0.1.0"
description = "Where Claude becomes whoever you need"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "python-frontmatter>=1.0.0",
    "logfire[fastapi,httpx]>=3.0.0",
    "redis>=5.0.0",
    "psycopg[binary]>=3.1.0",
    "pendulum>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greatloom"]
